# event-dedup

./: .gitignore  README.md  docker-compose.yml  event_model.py  event_schema.py  generate_targets.py  main.py  metrics.py  prometheus.yml  pyproject.toml  settings.py
provisioning/dashboards/: event-dedup.json
provisioning/datasources/: prometheus.yml
