[project]
name = "event-dedup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "pydantic-settings>=2.14.1",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.47.0",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.2.2",
    "gunicorn>=26.0.0",
] 
